fixes for date position and header/footer width on small screen

--- a/app/assets/stylesheets/antarcticle.css.scss
+++ b/app/assets/stylesheets/antarcticle.css.scss
@@ -26,6 +26,7 @@ body {
   height: 100%;
   background-color: rgb(247, 247, 247);
   background-image: url("fabric_plaid.png");
+  padding: 0;
 }
 
 hr {
@@ -90,6 +91,7 @@ pre, code {
 
 #main-container {
   padding-bottom: 100px;
+  padding: 0 15px 100px 15px
 }
 
 .navbar .nav > li > a {
@@ -179,8 +181,6 @@ pre, code {
   }
 
   .month {
-    top: 0;
-    left: 0;
     font-size: 18px;
   }
 
@@ -207,10 +207,10 @@ article.entry {
       margin: 0;
       border-bottom: none;
       position: relative;
-      min-height: 40px;
       .date {
         position: absolute;
-        bottom: 60px;
+        bottom: 50px;
+        padding-left: 5px;
       }
       h2 {
         font-size: 1.8em;
